# free_fleet

./: Dockerfile  README.md
free_fleet/free_fleet/: ros2_types.py  utils.py
free_fleet/tests/: test_utils.py
free_fleet_adapter/: CMakeLists.txt  package.xml
free_fleet_adapter/free_fleet_adapter/: fleet_adapter.py  nav2_robot_adapter.py  patrol.json  patrol_robot.json  robot_adapter.py
free_fleet_examples/: CMakeLists.txt  package.xml
free_fleet_examples/config/fleet/: rmf.yaml  zc.yaml
free_fleet_examples/config/zenoh/: nav2_tb3_zenoh_bridge_ros2dds_client_config.json5  nav2_unique_multi_tb3_zenoh_bridge_ros2dds_client_config.json5
free_fleet_examples/free_fleet_examples/: go_to_charger.py
free_fleet_examples/free_fleet_examples/actions/: zc_action.py  zc_actions.py
free_fleet_examples/launch/: office1.launch.xml  office_fleet_adapter.launch.xml  turtlebot3_world_rmf_common.launch.xml  zc.launch.xml  zc_rmf_common.launch.xml
free_fleet_examples/launch/include/: rmf_common.launch.xml
rmf_web_viz/: package.xml  setup.cfg  setup.py
rmf_web_viz/rmf_web_viz/: web_viz.py
rmf_web_viz/rmf_web_viz/templates/: index.html
