<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_web_viz</name>
  <version>0.0.0</version>
  <description>A simple web visualizer for Open-RMF using Flask and ROS 2</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>rmf_fleet_msgs</depend>
  <depend>rmf_building_map_msgs</depend>
  <depend>rmf_site_map_msgs</depend>

  <exec_depend>python3-flask</exec_depend>
  <exec_depend>python3-socketio</exec_depend>
  <exec_depend>python3-eventlet</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

